--- a/responsive-bp/template.html
+++ b/responsive-bp/template.html
@@ -16,8 +16,60 @@
     <![endif]-->
 </head>
 <body>
-    
 
+    <div class="row lh-m menu fixed">
+        <div class="col-s-2 bh1">
+            <a href="#me" class="transparent">Me</a>
+        </div>
+        <div class="col-s-2 bh2">
+            <a href="#skills" class="transparent">Skills</a>
+        </div>
+        <div class="col-s-2 bh3">
+            <a href="#resume" class="transparent">Resume</a>
+        </div>
+        <div class="col-s-2 bh4">
+            <a href="#portfolio" class="transparent">Portfolio</a>
+        </div>
+        <div class="col-s-2 bh5">
+            <a href="#ios" class="transparent">iOS</a>
+        </div>
+        <div class="col-s-2 bh6">
+            <a href="#contact" class="transparent">Contact</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <p class="simple">simple is beautiful</p>
+    </div>
+
+    <div class="row" id="main">
+        <div class="row" id="me">
+            <h2>About me</h2>
+              <h1>Miguel Angel Rodriguez Alvarez Icaza</h1>
+                <h3>UX Manager</h3>
+                    <p>Taking care of the smallest details — methodically — is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</p>
+        </div>
+        <div class="row" id="skills">
+            <h2>My Skills</h2>
+                <p>joijew joiwj lkewel;k jwl;ekjopijpas kl;jpoij ;klej poiwje ;lqkljrew opi; s;lk d;lkjew ;lkj ;oew </p>
+        </div>
+        <div class="row" id="resume">
+            <h2>My Resume</h2>
+                <p>p;jkla jf;lksdj ;lkjsdfio;sdhkjashoiuhlsg lg gljksgadflas gfljksag lsglf</p>
+        </div>
+        <div class="row" id="portfolio">
+            <h2>Portfolio</h2>
+                <p>h;;h; Loerw hwoiwe jwoijer jowe jwejojeojo wejoij ljwj jwjww ljkl</p>
+        </div>
+        <div class="row" id="ios">
+            <h2>iOS Development</h2>
+                <p>jkl;j jkljhjkslhd jklhas jklhadfljk hsljkdhlaskjdf lksahfkl jhsal kjhkljh klsjahfj</p>
+        </div>
+        <div class="row" id="contact">
+            <h2>Contact me</h2>
+                <p>lkjhhlkhlk hjkh hj jh hjkjklhjkh hj jh kjh kjh h hkhk hkjh kjh kjhkjh khjhkjhkhk hk kjh kjh khkj </p>
+        </div>
+    </div>
 
     <!--[if IE 8]>     
     <script src="vendor/jquery-1.11.1.min.js"></script>
