--- a/bp/index.html
+++ b/bp/index.html
@@ -69,6 +69,25 @@
 
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
+                <div class="row">
+                    <div class="col-s-3">
+                        <div class="media">
+                            <a class="grouped" href="img/beautiful-spanish-town.jpg" data-modal-title="Medieval street" data-modal-group=".grouped">
+                            <img src="img/beautiful-spanish-town.jpg" alt="Beautiful spanish town with a long street walk between medieval buildings picture" title="Beautiful spanish town with a long street walk between medieval buildings"></a>
+                        </div>
+                    </div>
+                    <div class="col-s-3">
+                        <div class="media">
+                            <a class="grouped" href="img/medieval-spanish-castle.jpg" data-modal-title="Medieval Castle" data-modal-group=".grouped"><img src="img/medieval-spanish-castle.jpg" alt="Medieval spanish castle picture" title="rMedieval spanish castle"></a>
+                        </div>
+                    </div>
+                    <div class="col-s-3">
+                        <div class="media">
+                            <a class="grouped" href="img/medieval-castle-at-night.jpg" data-modal-title="Medieval Castle at night" data-modal-group=".grouped"><img src="img/medieval-castle-at-night.jpg" alt="Medieval castle at night image" title="Medieval castle at night"></a>
+                        </div>
+                    </div>
+                </div>
+
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
         </div>
         <div class="row" id="ios">
