--- a/bp/index.html
+++ b/bp/index.html
@@ -70,18 +70,18 @@
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
                 <div class="row">
-                    <div class="col-s-3">
+                    <div class="col-s-4">
                         <div class="media">
                             <a class="grouped" href="img/beautiful-spanish-town.jpg" data-modal-title="Medieval street" data-modal-group=".grouped">
                             <img src="img/beautiful-spanish-town.jpg" alt="Beautiful spanish town with a long street walk between medieval buildings picture" title="Beautiful spanish town with a long street walk between medieval buildings"></a>
                         </div>
                     </div>
-                    <div class="col-s-3">
+                    <div class="col-s-4">
                         <div class="media">
                             <a class="grouped" href="img/medieval-spanish-castle.jpg" data-modal-title="Medieval Castle" data-modal-group=".grouped"><img src="img/medieval-spanish-castle.jpg" alt="Medieval spanish castle picture" title="rMedieval spanish castle"></a>
                         </div>
                     </div>
-                    <div class="col-s-3">
+                    <div class="col-s-4">
                         <div class="media">
                             <a class="grouped" href="img/medieval-castle-at-night.jpg" data-modal-title="Medieval Castle at night" data-modal-group=".grouped"><img src="img/medieval-castle-at-night.jpg" alt="Medieval castle at night image" title="Medieval castle at night"></a>
                         </div>
@@ -92,6 +92,12 @@
         </div>
         <div class="row" id="ios">
             <h2>iOS Development</h2>
+
+                <div class="col-s-12">
+                    <div>
+                        <a href="img/App_Store_Badge_US-UK_135x40.svg" data-modal-title="Available in the Apple App Store"><img src="img/App_Store_Badge_US-UK_135x40.svg" alt="Apple App Store badge" title="Apple App Store badge"></a>
+                    </div>
+                </div>
 
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
