--- a/bp/index.html
+++ b/bp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Your site description." />
@@ -14,6 +15,7 @@
         <script src="vendor/html5shiv.min.js"></script>
         <script src="vendor/respond.min.js"></script>
     <![endif]-->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
 
@@ -93,9 +95,9 @@
         <div class="row" id="ios">
             <h2>iOS Development</h2>
 
-                <div class="col-s-12">
+                <div class="col-s-12 mb32">
                     <div>
-                        <a href="img/App_Store_Badge_US-UK_135x40.svg" data-modal-title="Available in the Apple App Store"><img src="img/App_Store_Badge_US-UK_135x40.svg" alt="Apple App Store badge" title="Apple App Store badge"></a>
+                        <a href="img/App_Store_Badge_US-UK_1000x296.svg" data-modal-title="Available in the Apple App Store"><img src="img/App_Store_Badge_US-UK_135x40.svg" width="45%" alt="Apple App Store badge" title="Apple App Store badge"></a>
                     </div>
                 </div>
 
