--- a/bp/index.html
+++ b/bp/index.html
@@ -5,8 +5,8 @@
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Your site description." />
-    <title>Your page title</title>
+    <meta name="description" content="Site description." />
+    <title>Miguel Angel Rodriguez Alvarez Icaza</title>
     
     <link href="responsive.min.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <div class="row lh-m menu fixed">
+    <div class="row lh-m menu fixed nav">
         <div class="col-s-2 bh1">
             <a href="#me" class="transparent">Me</a>
         </div>
