--- a/bp/index.html
+++ b/bp/index.html
@@ -19,7 +19,23 @@
 </head>
 <body>
 
-    <div class="row lh-m menu fixed nav">
+    <div class="row">
+      <div class="fixed center visible-xs">
+        <button class="menuB">Menu</button>
+          <nav>
+            <ul>
+              <li><a href="#me">Me</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#resume">Resume</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#ios">iOS</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+      </div>
+    </div>
+
+    <div class="row lh-m menu fixed hidden-xs">
         <div class="col-s-2 bh1">
             <a href="#me" class="transparent">Me</a>
         </div>
@@ -97,7 +113,7 @@
 
                 <div class="col-s-12 mb32">
                     <div>
-                        <a href="img/App_Store_Badge_US-UK_1000x296.svg" data-modal-title="Available in the Apple App Store"><img src="img/App_Store_Badge_US-UK_135x40.svg" width="45%" alt="Apple App Store badge" title="Apple App Store badge"></a>
+                        <a href="img/App_Store_Badge_US-UK_1000x296.svg" data-modal-title="Available in the Apple App Store"><img src="img/App_Store_Badge_US-UK_135x40.svg" width="30%" alt="Apple App Store badge" title="Apple App Store badge"></a>
                     </div>
                 </div>
 
