--- a/bp/index.html
+++ b/bp/index.html
@@ -134,10 +134,10 @@
     <script src="vendor/jquery-1.11.1.min.js"></script>
     <![endif]-->
     <!--[if gt IE 8]><!-->
-    <script src="vendor/jquery-2.1.1.min.js"></script>
+    <script type='text/javascript' src="vendor/jquery-2.1.1.min.js"></script>
     <!--<![endif]-->
 
-    <script src="responsive.min.js"></script>
-    <script src="scripts.js"></script>
+    <script type='text/javascript' src="responsive.min.js"></script>
+    <script type='text/javascript' src="scripts.js"></script>
 </body>
 </html>
