--- a/bp/index.html
+++ b/bp/index.html
@@ -128,6 +128,35 @@
 
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
         </div>
+
+        <footer class="row">
+            <div class="col-s-3">
+                <p class="center"><a href="#">&copy; Mikerai 2014</a></p>
+            </div>
+            <div class="col-s-9">
+                <div class="col-s-12 center">
+                    <div class="col-s-2">
+                        <a href="#me">Me</a>
+                    </div>
+                    <div class="col-s-2">
+                        <a href="#skills">Skills</a>
+                    </div>
+                    <div class="col-s-2">
+                        <a href="#resume">Resume</a>
+                    </div>
+                    <div class="col-s-2">
+                        <a href="#portfolio">Portfolio</a>
+                    </div>
+                    <div class="col-s-2">
+                        <a href="#ios">iOS</a>
+                    </div>
+                    <div class="col-s-2">
+                        <a href="#contact">Contact</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
     </div>
 
     <!--[if IE 8]>     
