Changes to meta tags

--- a/new_look/Video Background Version/HTML Files/index-es.html
+++ b/new_look/Video Background Version/HTML Files/index-es.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+<link rel="canonical" href="http://mikerai.com" />
+<meta name="robots" content="noindex">
 <title>Miguel Angel Rodriguez Alvarez Icaza - UX Manager</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
