--- a/bp/index.html
+++ b/bp/index.html
@@ -67,6 +67,11 @@
                 <h3>UX Manager</h3>
                     <p>Taking care of the smallest details — methodically — is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</p>
         </div>
+
+        <div class="row">
+            <p class="simplify">simplify</p>
+        </div>
+
         <div class="row" id="skills">
             <h2>My Skills</h2>
                 <h3>E-commerce expert</h3>
@@ -75,6 +80,7 @@
 
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
         </div>
+
         <div class="row" id="resume">
             <h2>My Resume</h2>
 
