Final tweaks for today. 3 phrases added. Now contact us and then content

--- a/bp/index.html
+++ b/bp/index.html
@@ -68,10 +68,6 @@
                     <p>Taking care of the smallest details — methodically — is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</p>
         </div>
 
-        <div class="row">
-            <p class="simplify">simplify</p>
-        </div>
-
         <div class="row" id="skills">
             <h2>My Skills</h2>
                 <h3>E-commerce expert</h3>
@@ -79,6 +75,10 @@
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
+        </div>
+
+        <div class="row">
+            <p class="simplify">simplify</p>
         </div>
 
         <div class="row" id="resume">
@@ -114,6 +114,11 @@
 
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
         </div>
+
+        <div class="row">
+            <p class="ksimple">keep it simple</p>
+        </div>
+
         <div class="row" id="ios">
             <h2>iOS Development</h2>
 
