Contact form UI done

--- a/bp/index.html
+++ b/bp/index.html
@@ -135,9 +135,45 @@
         <div class="row" id="contact">
             <h2>Contact me</h2>
 
-                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
+                <h3>Please send me a message.</h3>
 
-                <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
+                <section>
+                    <form action="#">
+                        <fieldset>
+                            <div class="row">
+                                <div class="col-s-6">
+                                    <div class="row">
+                                        <div class="col-s-4">
+                                            <label for="input-name">Your name</label>
+                                        </div>
+                                        <div class="col-s-8">
+                                              <input type="text" id="input-name" value="">  
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-s-4">
+                                            <label for="input-email">Your email address</label>
+                                        </div>
+                                        <div class="col-s-8">
+                                              <input type="email" id="input-email">  
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-s-4">
+                                            <label for="input-message">Your name</label>
+                                        </div>
+                                        <div class="col-s-8">
+                                              <textarea id="textarea2" name="textarea2" data-autosize data-autosize-remove-attributes="data-val-message" data-autosize-remove-classes="validate error" ></textarea > 
+                                        </div>
+                                        <div class="form-actions">
+                                            <button class="submit-button" style="float: right;" type="submit">Send</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </section>
         </div>
 
         <footer class="row">
