--- a/bp/index.html
+++ b/bp/index.html
@@ -138,74 +138,34 @@
                 <h3>Please send me a message.</h3>
 
                 <section>
-                    <script type="text/javascript">
-                     var RecaptchaOptions = {
-                        theme : 'clean'
-                     };
-                     </script>
                     <form action="verify.php" method="post">
-                        <?php
-                          require_once('recaptchalib.php');
-                          $publickey = "6LfP2P0SAAAAAEQv19ZXrjY9GoxxnLulbQYAHDYF"; // you got this from the signup page
-                          echo recaptcha_get_html($publickey);
-                        ?>
-                         
                         <fieldset>
                             <div class="row">
                                 <div class="col-s-6">
                                     <div class="row">
                                         <div class="col-s-4">
-                                            <label for="input-name">Your name</label>
+                                            <label for="name">Your name</label>
                                         </div>
                                         <div class="col-s-8">
-                                              <input type="text" id="input-name" value="">  
+                                              <input type="text" id="name" name="name" value="">  
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-s-4">
-                                            <label for="input-email">Your email address</label>
+                                            <label for="email">Your email address</label>
                                         </div>
                                         <div class="col-s-8">
-                                              <input type="email" id="input-email">  
+                                              <input type="email" id="email" name="email">  
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-s-4">
-                                            <label for="input-message">Your name</label>
+                                            <label for="message">Your name</label>
                                         </div>
                                         <div class="col-s-8">
-                                              <textarea id="textarea2" name="textarea2" data-autosize data-autosize-remove-attributes="data-val-message" data-autosize-remove-classes="validate error" ></textarea > 
+                                              <textarea id="message" name="message" data-autosize data-autosize-remove-attributes="data-val-message" data-autosize-remove-classes="validate error" ></textarea > 
                                         </div>
                                         <div class="form-actions">
-                                            <div id="recaptcha_widget" style="display:none">
-
-                                               <div id="recaptcha_image"></div>
-                                               <div class="recaptcha_only_if_incorrect_sol" style="color:red">Incorrect please try again</div>
-
-                                               <span class="recaptcha_only_if_image">Enter the words above:</span>
-                                               <span class="recaptcha_only_if_audio">Enter the numbers you hear:</span>
-
-                                               <input type="text" id="recaptcha_response_field" name="recaptcha_response_field" />
-
-                                               <div><a href="javascript:Recaptcha.reload()">Get another CAPTCHA</a></div>
-                                               <div class="recaptcha_only_if_image"><a href="javascript:Recaptcha.switch_type('audio')">Get an audio CAPTCHA</a></div>
-                                               <div class="recaptcha_only_if_audio"><a href="javascript:Recaptcha.switch_type('image')">Get an image CAPTCHA</a></div>
-
-                                               <div><a href="javascript:Recaptcha.showhelp()">Help</a></div>
-
-                                             </div>
-
-                                             <script type="text/javascript"
-                                                src="http://www.google.com/recaptcha/api/challenge?k=6LfP2P0SAAAAAEQv19ZXrjY9GoxxnLulbQYAHDYF">
-                                             </script>
-                                             <noscript>
-                                               <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LfP2P0SAAAAAEQv19ZXrjY9GoxxnLulbQYAHDYF"
-                                                    height="300" width="500" frameborder="0"></iframe><br>
-                                               <textarea name="recaptcha_challenge_field" rows="3" cols="40">
-                                               </textarea>
-                                               <input type="hidden" name="recaptcha_response_field"
-                                                    value="manual_challenge">
-                                             </noscript>
                                             <button class="submit-button" style="float: right;" type="submit">Send</button>
                                         </div>
                                     </div>
