Tweets moved to the right

--- a/bp/index.html
+++ b/bp/index.html
@@ -159,9 +159,12 @@
                         </form>
                     </section>
                 </div>
-                <div class="col-xs-6" id="tweets">
-                    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                <div class="col-xs-6 center">
+                    <button class="tweets mb16">My Tweets</button>
+                        <div id="tweets">
+                            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
+                                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                        </div>
                 </div>
         </div>
 
