--- a/bp/index.html
+++ b/bp/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="row" id="contact">
             <h2>Contact me</h2>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-s-6 mb16">
                     <section>
                         <form class="cmxform" id="commentForm" method="post" action="verify.php" novalidate="novalidate">
                           <h3>Please send me a message.</h3>
@@ -159,7 +159,7 @@
                         </form>
                     </section>
                 </div>
-                <div class="col-xs-6 center">
+                <div class="col-xs-12 col-s-6 center">
                     <button class="tweets mb16">My Tweets</button>
                         <div id="tweets">
                             <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
@@ -167,8 +167,9 @@
                         </div>
                 </div>
         </div>
+    </div>
 
-        <footer class="row">
+    <footer class="row">
             <div class="col-s-3">
                 <p class="center"><a href="#">&copy; Mikerai 2014</a></p>
             </div>
@@ -195,8 +196,6 @@
                 </div>
             </div>
         </footer>
-
-    </div>
 
     <!--[if IE 8]>     
     <script src="vendor/jquery-1.11.1.min.js"></script>
