Images added to clients. Lowes, AAFES, Lenox and WnG still missing

--- a/bp/index.html
+++ b/bp/index.html
@@ -93,21 +93,49 @@
 
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
-                <div class="row">
-                    <div class="col-s-4">
-                        <div class="media">
-                            <a class="grouped" href="img/beautiful-spanish-town.jpg" data-modal-title="Medieval street" data-modal-group=".grouped">
-                            <img src="img/beautiful-spanish-town.jpg" alt="Beautiful spanish town with a long street walk between medieval buildings picture" title="Beautiful spanish town with a long street walk between medieval buildings"></a>
+                <div class="row clients">
+                    <div class="row">    
+                        <div class="col-s-3 col-xs-3">
+                            <div class="">
+                                <img src="img/brusmall.png" alt="Babies R Us logo" title="Babies R Us logo">
+                            </div>
+                        </div>
+                        <div class="col-s-3 col-xs-3">
+                            <div class="">
+                                <img src="img/cachesmall.png" alt="Cache logo" title="Cache logo">
+                            </div>
+                        </div>
+                        <div class="col-s-3 col-xs-3">
+                            <div class="">
+                                <img src="img/hebsmall.png" alt="H E B logo" title="H E B logo">
+                            </div>
+                        </div>
+                        <div class="col-s-3 col-xs-3">
+                            <div class="">
+                                <img src="img/huaweismall.png" alt="Huawei logo" title="Huawei logo">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-s-4">
-                        <div class="media">
-                            <a class="grouped" href="img/medieval-spanish-castle.jpg" data-modal-title="Medieval Castle" data-modal-group=".grouped"><img src="img/medieval-spanish-castle.jpg" alt="Medieval spanish castle picture" title="rMedieval spanish castle"></a>
+                    <div class="row">    
+                        <div class="col-s-3 col-xs-3">
+                            <div class="">
+                                <img src="img/justicesmall.png" alt="Shop Justice logo" title="Shop Justice logo">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-s-4">
-                        <div class="media">
-                            <a class="grouped" href="img/medieval-castle-at-night.jpg" data-modal-title="Medieval Castle at night" data-modal-group=".grouped"><img src="img/medieval-castle-at-night.jpg" alt="Medieval castle at night image" title="Medieval castle at night"></a>
+                        <div class="col-s-3 col-xs-3">
+                            <div class="">
+                                <img src="img/navarresmall.png" alt="Navarre Corporation logo" title="Navarre Corporation logo">
+                            </div>
+                        </div>
+                        <div class="col-s-3 col-xs-3">
+                            <div class="">
+                                <img src="img/nexcomsmall.png" alt="Shop Nexcom logo" title="Shop Nexcom logo">
+                            </div>
+                        </div>
+                        <div class="col-s-3 col-xs-3">
+                            <div class="">
+                                <img src="img/trusmall.png" alt="Toys R Us logo" title="Toys R Us logo">
+                            </div>
                         </div>
                     </div>
                 </div>
